--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      src="https://kit.fontawesome.com/ddbc17e955.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Github Finder App</title>
   </head>
   <body>
